--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Navigation Bar -->
   <div class="navbar">
     <div class="logo">
-        <img src="images/logo.png" alt="Logo">
+        <img src="images/Logo.png" alt="Logo">
     </div>
     <div class="menu">
         <a href="#services">Services</a>
