--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Taxi Go offers reliable and professional taxi services in Warwick and Warwickshire. Book now for airport transfers, local tours, and long-distance trips.">
+  <meta name="keywords" content="taxi service Warwick, airport transfers Warwick, Warwickshire taxi service, Warwick tours, long-distance taxis, affordable taxi Warwick, Warwick transport">
+  <meta name="author" content="Taxi Go - Warwick">
+
+  <meta name="geo.region" content="GB-ENG">
+  <meta name="geo.placename" content="Warwick, Warwickshire">
+  <meta name="geo.position" content="52.2832;-1.5849">
+  <meta name="ICBM" content="52.2832, -1.5849">
+
+  
+  
   <title>Taxi Go - Warwick</title>
   <link rel="stylesheet" href="styles/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
